@@ -25,6 +25,10 @@ class Test::Unit::TestCase #:nodoc:
   self.use_transactional_fixtures = true
   self.use_instantiated_fixtures  = false
   
+  def setup
+    Tag.delimiter = ","
+  end
+  
   def assert_equivalent(expected, actual, message = nil)
     if expected.first.is_a?(ActiveRecord::Base)
       assert_equal expected.sort_by(&:id), actual.sort_by(&:id), message
